Añadido estilo CSS base y vinculación en HTML

--- a/Cursos.html
+++ b/Cursos.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contáctenos - Cursos Colombia S.A.S</title>
+    <link rel="stylesheet" href="style.css">
 
 <body>
     <H1>Aqui se pone los cursos</H1>
