Refactor: Limpieza de estructura HTML de la tabla de atención

--- a/index.html
+++ b/index.html
@@ -46,42 +46,35 @@
 
         <br>
         //multimedia
+        
         <section id="informacion">
             <h2>Información de Atención</h2>
-
             <table id="tabla-contacto">
-
                 <caption>Horarios y Tiempos de Respuesta</caption>
-
                 <thead>
                     <tr>
-                        <th scope="col">Tipo de Consulta |</th>
-                        <th scope="col">Horario Disponible |</th>
-                        <th scope="col">Tiempo de Respuesta |</th>
-
+                        <th scope="col">Tipo de Consulta</th>
+                        <th scope="col">Horario Disponible</th>
+                        <th scope="col">Tiempo de Respuesta</th>
                     </tr>
                 </thead>
-
                 <tbody>
                     <tr>
                         <th scope="row">Soporte de Cursos</th>
                         <td>Lunes a Viernes / 8am - 6pm</td>
                         <td>24 horas</td>
                     </tr>
-
                     <tr>
                         <th scope="row">Inscripciones</th>
                         <td>Lunes a Sábado / 9am - 5pm</td>
                         <td>12 horas</td>
                     </tr>
-
                     <tr>
                         <th scope="row">Pagos y Facturación</th>
                         <td>Lunes a Viernes / 8am - 4pm</td>
                         <td>48 horas</td>
                     </tr>
                 </tbody>
-
                 <tfoot>
                     <tr>
                         <td colspan="2">Tiempo máximo estimado</td>
@@ -90,7 +83,6 @@
                 </tfoot>
             </table>
         </section>
-
         <hr>
 
         //multimedia
