--- a/contactenos.html
+++ b/contactenos.html
@@ -2,12 +2,13 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - Cursos Colombia S.A.S</title>
+    <title>Contacto - Cursos Colombia</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <header>
+        <h1>Cursos Colombia S.A.S</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -17,38 +18,33 @@
         </nav>
     </header>
 
-    <main class="container">
-        <section id="contacto-header">
-            <h1>Ponte en contacto con nosotros</h1>
-            <p>Estamos aquí para ayudarte en tu proceso de formación.</p>
-        </section>
+    <main>
+        <h2>Formulario de Contacto</h2>
+        <p>Escríbenos y te responderemos pronto.</p>
 
-        <section class="flex-container">
-            <div class="form-card">
-                <form id="form-contacto">
-                    <div class="form-group">
-                        <label for="nombre">Nombre Completo</label>
-                        <input type="text" id="nombre" placeholder="Tu nombre..." required>
-                    </div>
-                    <div class="form-group">
-                        <label for="correo">Correo Electrónico</label>
-                        <input type="email" id="correo" placeholder="ejemplo@correo.com" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="mensaje">¿En qué podemos ayudarte?</label>
-                        <textarea id="mensaje" rows="5"></textarea>
-                    </div>
-                    <button type="submit" class="btn-enviar">Enviar Mensaje</button>
-                </form>
-            </div>
+        <form id="form-contacto">
+            <label for="nombre">Nombre:</label><br>
+            <input type="text" id="nombre" name="nombre" placeholder="Escribe tu nombre">
+            <br><br>
 
-            <div class="info-card">
-                <h3>Nuestra Sede</h3>
-                <p>Medellín, Edificio CESDE</p>
-                <p>+57 300 000 0000</p>
-                <p>info@cursoscolombia.com</p>
-            </div>
+            <label for="correo">Correo:</label><br>
+            <input type="email" id="correo" name="correo" placeholder="tu@correo.com">
+            <br><br>
+
+            <label for="mensaje">Mensaje:</label><br>
+            <textarea id="mensaje" name="mensaje" rows="4"></textarea>
+            <br><br>
+
+            <button type="submit">Enviar Ahora</button>
+        </form>
+
+        <hr>
+
+        <section>
+            <h3>Nuestra Ubicación</h3>
+            <p>Sede Medellín - Edificio CESDE</p>
         </section>
     </main>
+
 </body>
 </html>
