--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </main>
 
     <footer>
-        <p>© 2025 Cursos Colombia S.A.S — Todos los derechos reservados.</p>
+        <p>© 2025 Cursos Colombia S.A.S</p>
     </footer>
 
 </body>
