--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 
-    <h1>Contáctenos - Cursos Colombia S.A.S</h1>
+    <h1>Contáctenos - Cursos Colombia</h1>
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
