agrege css a cursos

--- a/Cursos.html
+++ b/Cursos.html
@@ -1,13 +1,101 @@
 <!DOCTYPE html>
 <html lang="es">
-
+<link rel="stylesheet" href="style.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contáctenos - Cursos Colombia S.A.S</title>
 
 <body>
-    <H1>Aqui se pone los cursos</H1>
-</body>
 
+<header>
+    <h1>Cursos - Cursos Colombia S.A.S</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="cursos.html">Cursos</a></li>
+            <li><a href="contactenos.html">Contáctenos</a></li>
+        </ul>
+    </nav>
+</header>
+
+<main>
+
+    <!-- Sección principal -->
+    <section id="cursos">
+        <h2>Lista de Cursos Disponibles</h2>
+
+        <ul>
+            <li>Curso de Español</li>
+            <li>Curso de Inglés</li>
+            <li>Curso de Matemáticas</li>
+        </ul>
+    </section>
+
+    <hr>
+
+    <!-- Información de cursos -->
+    <section id="informacion">
+        <h2>Información General de los Cursos</h2>
+
+        <table>
+            <caption>Características de los Cursos</caption>
+
+            <thead>
+                <tr>
+                    <th scope="col">Curso</th>
+                    <th scope="col">Nivel</th>
+                    <th scope="col">Modalidad</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <th scope="row">Español</th>
+                    <td>Básico a Avanzado</td>
+                    <td>Virtual</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">Inglés</th>
+                    <td>Básico a Avanzado</td>
+                    <td>Presencial / Virtual</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">Matemáticas</th>
+                    <td>Escolar</td>
+                    <td>Presencial</td>
+                </tr>
+            </tbody>
+
+            <tfoot>
+                <tr>
+                    <td colspan="2">Duración promedio</td>
+                    <td>3 a 6 meses</td>
+                </tr>
+            </tfoot>
+        </table>
+    </section>
+
+    <hr>
+
+    <!-- Descripción adicional -->
+    <section id="descripcion">
+        <h2>Sobre Nuestros Cursos</h2>
+
+        <p>
+            Cursos Colombia S.A.S ofrece programas educativos diseñados para fortalecer
+            las habilidades académicas y lingüísticas de nuestros estudiantes,
+            con docentes calificados y materiales actualizados.
+        </p>
+    </section>
+
+</main>
+
+<footer>
+    <p>© 2025 Cursos Colombia S.A.S — Todos los derechos reservados.</p>
+</footer>
+
+</body>
 </html>
