Insertamos los cursos pero hay cambios necesarios en el css y el resto de archivos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 
-    <h1>Contáctenos - Cursos Colombia</h1>
+    <h1>Cursos Colombia</h1>
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
@@ -22,31 +22,6 @@
 
 
     <main>
-
-        //multimedia
-        <section id="contacto">
-            <h2>Contáctanos para más información</h2>
-
-            <form id="form-contacto">
-
-                <label for="nombre">Nombre Completo:</label><br>
-                <input type="text" id="nombre" name="nombre"><br><br>
-
-                <label for="correo">Correo Electrónico:</label><br>
-                <input type="email" id="correo" name="correo"><br><br>
-
-                <label for="mensaje">Mensaje:</label><br>
-                <textarea id="mensaje" name="mensaje" rows="4" cols="40"></textarea><br><br>
-
-                <input type="button" value="Enviar Mensaje">
-            </form>
-        </section>
-        <br>
-        <hr>
-
-        <br>
-        //multimedia
-        
         <section id="informacion">
             <h2>Información de Atención</h2>
             <table id="tabla-contacto">
